--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 	<div id="content">
-		<header> Trivia Game!</header>
+		<header> Math Problems!!</header>
 
 		<div id="timer">
 		
